# SUI-CLI

./: .gitignore  Cargo.toml  README.md
src/: main.rs
