[package]
name = "sui-cli"
version = "0.3.0"
authors = ["SekoiaTree <sequoia.1009@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.48"
serde = {version = "1.0", features = ["derive"]}
dirs-next = "2.0.0"